Documentation for GPU
Signed-off-by: Matthias Kümmerer <matthias@matthias-k.org>

--- a/02_mnist_classification.ipynb
+++ b/02_mnist_classification.ipynb
@@ -129,7 +129,7 @@
     "# plot the images in the batch, along with the corresponding labels\n",
     "fig = plt.figure(figsize=(25, 4))\n",
     "for idx in np.arange(20):\n",
-    "    ax = fig.add_subplot(2, 20/2, idx+1, xticks=[], yticks=[])\n",
+    "    ax = fig.add_subplot(2, 20 // 2, idx+1, xticks=[], yticks=[])\n",
     "    ax.imshow(np.squeeze(images[idx]), cmap='gray')\n",
     "    # print out the correct label for each image\n",
     "    # .item() gets the value contained in a Tensor\n",
@@ -451,13 +451,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "cxSjukdZFw2s"
    },
+   "source": [
+    "# Using GPUs\n",
+    "\n",
+    "if you have a GPU available, you can move your model to the cpu with `model = model.cuda()`. You'll also have to move data to the GPU before processing it, e.g. by running\n",
+    "\n",
+    "```\n",
+    "data = data.cuda()\n",
+    "target = target.cuda()\n",
+    "```\n",
+    "\n",
+    "for getting data back to the CPU (which you have to do before you can convert it to numpy), use `.cpu()`. In practive this offen looks like\n",
+    "```\n",
+    "loss = loss.detach().cpu().numpy()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
